Securing Web Service with Cert Manager in K8s/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip-service
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
