Securing Web Service with Cert Manager in K8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-imesh-ai-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-demo-nginx
spec:
  ingressClassName: nginx
  tls:
  - secretName: demo-app-imesh-tls
    hosts:
    - demo.app.imesh.ai
  rules:
  - host: demo.app.imesh.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-cluster-ip-service
            port:
              number: 80
